--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "dependencies": {
-    "http": "0.0.0",
-    "swig": "^1.4.2",
-    "url": "^0.11.0",
-    "util": "^0.10.3"
+    "mach": "^1.3.8",
+    "swig": "^1.4.2"
   },
   "devDependencies": {},
   "scripts": {
